--- a/Práctica 2/db/vga_top.lpc.html
+++ b/Práctica 2/db/vga_top.lpc.html
@@ -16,15 +16,31 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >BALL</TD>
+<TD >21</TD>
+<TD >3</TD>
+<TD >21</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >VGA</TD>
 <TD >4</TD>
-<TD >17</TD>
 <TD >0</TD>
-<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >27</TD>
-<TD >17</TD>
-<TD >17</TD>
-<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
